<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/id_video_layout"
    android:background="@color/grey_50"
    tools:showIn="@layout/activity_video">

    <TextView
        android:id="@+id/id_info_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:background="@color/grey_100"
        android:elevation="2dp"
        android:gravity="center"
        android:text="@string/str_video_message"
        android:textColor="@color/red_600"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/id_info_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/id_info_title"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:background="@color/grey_100"
        android:elevation="2dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/str_info_name"
        android:textColor="@color/grey_700"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/id_info_duration"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/id_info_name"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:background="@color/grey_100"
        android:elevation="2dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:paddingStart="40dp"
        android:text="@string/str_info_duration"
        android:textColor="@color/grey_600"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/id_info_size"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/id_info_duration"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:background="@color/grey_100"
        android:elevation="2dp"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="1"
        android:paddingEnd="20dp"
        android:paddingStart="40dp"
        android:text="@string/str_info_size"
        android:textColor="@color/grey_600"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/id_info_path"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_info_size"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="2dp"
        android:background="@color/grey_100"
        android:elevation="2dp"
        android:ellipsize="end"
        android:lineSpacingExtra="8dp"
        android:maxLines="5"
        android:paddingEnd="20dp"
        android:paddingStart="40dp"
        android:paddingTop="16dp"
        android:text="@string/str_info_path"
        android:textColor="@color/grey_500"
        android:textSize="12sp" />

</RelativeLayout>